Fix NowPlayingApp on Xpui

--- a/src/scss/now-playing.scss
+++ b/src/scss/now-playing.scss
@@ -6,10 +6,6 @@
 	margin-left: 8px;
 }
 
-.bs-now-playing, .nowplaying-add-button {
-	transform: translateX(32px);
-}
-
 .feedback-enabled .bs-now-playing {
 	right: (2 * 24px + 4px);
 }
